--- a/elmslie-samples/android-loader/build.gradle
+++ b/elmslie-samples/android-loader/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation(project(":elmslie-android"))
     implementation(project(":elmslie-core"))
     implementation(project(":elmslie-rxjava-2"))
+    implementation(project(":elmslie-store-persisting"))
 
     implementation(deps.android.appcompat)
     implementation(deps.android.material)
